# FaceOSC

./: CMakeLists.txt  faceosc-build-instructions.txt  ofApp.cpp  openFrameworks-Info.plist
src/: FaceOsc.cpp  FaceOsc.h  ofApp.cpp  ofApp.h
test/: CMakeLists.txt  main.cpp
test/fake/: ofMain.h  ofxCv.h  ofxGui.h
